# Mutsumi

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build.yml  release.yml
android/app/: build.gradle.kts
docs/: permissions.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: constants.dart  main.dart
lib/app/: mutsumi_app.dart  startup_page.dart
lib/player/: controller.dart  player.dart  player_interaction_state.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  (+1 more)
macos/Runner.xcodeproj/: project.pbxproj
scripts/: build_android_arm64_apk.sh  build_ios_ipa.sh
server/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.yaml  config.yaml.example  pyproject.toml  run.py  start.sh
server/app/: main.py
server/app/api/: router.py
server/app/api/routes/: anime.py  auth.py  config.py  qbittorrent.py  setup.py  storage.py  updates.py  users.py
server/app/core/: auth.py  config.py  constants.py  logging.py  qbittorrent_error.py
server/app/db/: session.py
server/app/models/: __init__.py  anime.py  user.py  watch_progress.py
server/app/schemas/: __init__.py  anime.py  auth.py  config.py  qbittorrent.py  setup.py  storage.py  update.py  user.py
server/app/services/: qbittorrent_service.py  server_update_service.py  storage_service.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+77 files in other folders)
